--- a/Week_1.ipynb
+++ b/Week_1.ipynb
@@ -12,7 +12,19 @@
    "metadata": {},
    "source": [
     "## 01 Assignment\n",
-    "Here is the text for the assignment linked to"
+    "1. Create 5 list comprehensions to solve the following 5 problems:\n",
+    "  1. Iterate a list of names to return a list of the names starting with H\n",
+    "  2. In one line create a list of the numbers 1-100 to the power of 3\n",
+    "  3. Iterate a list of names to create a list of tuples where the tuples first value is the length of the name and the second is the name\n",
+    "  4. Iterate over each character in a string and get only those that are nummeric\n",
+    "  5. Using only a list comprehension wrapped in set() get all possible combination from throwing 2 dice (hint use 2 for loops in a single list comprehension)\n",
+    "\n",
+    "2. Create 2 dictionary comprehensions to solve the following:\n",
+    "  1. Iterate a list of names and create a dictionary where key is the name and value is the length of the name\n",
+    "  2. Iterate a list of numbers and create a dictionary with {key:value} being {number:squareroot_of_number}\n",
+    "\n",
+    "3. Extra assignment (This one goes beyond what is covered in the course notebooks. So only do it if you want an extra challenge).\n",
+    "  - Progammatically using loops create a small program to produce a dictionary with all the 2 dice throw combinations as keys and their likelyhood in percent as values"
    ]
   },
   {
@@ -20,72 +32,295 @@
    "metadata": {},
    "source": [
     "## 02 Status\n",
-    "Here is a status on the handin. How far you got. What is implemented and what is not"
+    "All week 1 exercises have been completed except the extra assignment."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 03 Solution part 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1.1 some code here with docstrings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1.2 some code here with docstrings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1.3"
+    "## 1. Create 5 list comprehensions to solve the following 5 problems:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 04 Solution part 2"
+    "### A. Iterate a list of names to return a list of the names starting with H"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hassanain', 'Henrik']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 2.1"
+    "names_list = list([\"Hassanain\",\"Ali\",\"Søren\",\"Jacob\",\"Henrik\"])\n",
+    "\n",
+    "h_names = [name for name in names_list\n",
+    "          if name[0] == \"H\"]\n",
+    "\n",
+    "h_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### B. In one line create a list of the numbers 1-100 to the power of 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 8, 27, 64, 125, 216, 343, 512, 729, 1000, 1331, 1728, 2197, 2744, 3375, 4096, 4913, 5832, 6859, 8000, 9261, 10648, 12167, 13824, 15625, 17576, 19683, 21952, 24389, 27000, 29791, 32768, 35937, 39304, 42875, 46656, 50653, 54872, 59319, 64000, 68921, 74088, 79507, 85184, 91125, 97336, 103823, 110592, 117649, 125000, 132651, 140608, 148877, 157464, 166375, 175616, 185193, 195112, 205379, 216000, 226981, 238328, 250047, 262144, 274625, 287496, 300763, 314432, 328509, 343000, 357911, 373248, 389017, 405224, 421875, 438976, 456533, 474552, 493039, 512000, 531441, 551368, 571787, 592704, 614125, 636056, 658503, 681472, 704969, 729000, 753571, 778688, 804357, 830584, 857375, 884736, 912673, 941192, 970299, 1000000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([numbers ** 3 for numbers in list(range(101))])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### C. Iterate a list of names to create a list of tuples where the tuples first value is the length of the name and the second is the name"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Hassanain', 9), ('Ali', 3), ('Søren', 5), ('Jacob', 5), ('Henrik', 6)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names_list = list([\"Hassanain\",\"Ali\",\"Søren\",\"Jacob\",\"Henrik\"])\n",
+    "\n",
+    "tuples_list = [(names, len(names)) for names in names_list]\n",
+    "\n",
+    "tuples_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### D. Iterate over each character in a string and get only those that are nummeric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "5\n",
+      "5\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "5\n",
+      "0\n",
+      "3\n",
+      "0\n",
+      "8\n",
+      "3\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "names_string = \"8a55ana1n, A11, 50r3n, Jac0b, 83nr1k\"\n",
+    "for number in range(0, len(names_string)):\n",
+    "    if names_string[number].isnumeric():\n",
+    "        print(names_string[number])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### E. Using only a list comprehension wrapped in set() get all possible combination from throwing 2 dice (hint use 2 for loops in a single list comprehension)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1, 1),\n",
+       " (1, 2),\n",
+       " (1, 3),\n",
+       " (1, 4),\n",
+       " (1, 5),\n",
+       " (1, 6),\n",
+       " (2, 1),\n",
+       " (2, 2),\n",
+       " (2, 3),\n",
+       " (2, 4),\n",
+       " (2, 5),\n",
+       " (2, 6),\n",
+       " (3, 1),\n",
+       " (3, 2),\n",
+       " (3, 3),\n",
+       " (3, 4),\n",
+       " (3, 5),\n",
+       " (3, 6),\n",
+       " (4, 1),\n",
+       " (4, 2),\n",
+       " (4, 3),\n",
+       " (4, 4),\n",
+       " (4, 5),\n",
+       " (4, 6),\n",
+       " (5, 1),\n",
+       " (5, 2),\n",
+       " (5, 3),\n",
+       " (5, 4),\n",
+       " (5, 5),\n",
+       " (5, 6),\n",
+       " (6, 1),\n",
+       " (6, 2),\n",
+       " (6, 3),\n",
+       " (6, 4),\n",
+       " (6, 5),\n",
+       " (6, 6)}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dice_rolls = {(dice1, dice2) for dice1 in range(1,7) for dice2 in range(1,7)}\n",
+    "\n",
+    "dice_rolls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Create 2 dictionary comprehensions to solve the following:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A. Iterate a list of names and create a dictionary where key is the name and value is the length of the name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hassanain', 'Ali', 'Søren', 'Jacob', 'Henrik']\n",
+      "{'Hassanain': 9, 'Ali': 3, 'Søren': 5, 'Jacob': 5, 'Henrik': 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "names_list = list([\"Hassanain\",\"Ali\",\"Søren\",\"Jacob\",\"Henrik\"])\n",
+    "print(names_list)\n",
+    "names_dict = {name: len(name) for name in names_list}\n",
+    "print(names_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### B. Iterate a list of numbers and create a dictionary with {key:value} being {number:squareroot_of_number}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 1.0,\n",
+       " 2: 1.4142135623730951,\n",
+       " 3: 1.7320508075688772,\n",
+       " 4: 2.0,\n",
+       " 5: 2.23606797749979,\n",
+       " 6: 2.449489742783178,\n",
+       " 7: 2.6457513110645907,\n",
+       " 8: 2.8284271247461903,\n",
+       " 9: 3.0,\n",
+       " 10: 3.1622776601683795,\n",
+       " 11: 3.3166247903554,\n",
+       " 12: 3.4641016151377544,\n",
+       " 13: 3.605551275463989,\n",
+       " 14: 3.7416573867739413,\n",
+       " 15: 3.872983346207417,\n",
+       " 16: 4.0,\n",
+       " 17: 4.123105625617661,\n",
+       " 18: 4.242640687119285,\n",
+       " 19: 4.358898943540674,\n",
+       " 20: 4.47213595499958,\n",
+       " 21: 4.58257569495584,\n",
+       " 22: 4.69041575982343,\n",
+       " 23: 4.795831523312719,\n",
+       " 24: 4.898979485566356,\n",
+       " 25: 5.0}"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "key_list = (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25)\n",
+    "key_list\n",
+    "numbers_dict = {number:math.sqrt(number) for number in key_list}\n",
+    "numbers_dict"
+   ]
   }
  ],
  "metadata": {
